# Lentra

./: .env.example  .gitignore  ARCHITECTURE.md  README.MD
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt  test_evaluation.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py
backend/src/api/routes/: __init__.py  evaluate.py  models.py  prompt.py  rag.py
backend/src/core/: __init__.py  config.py  exceptions.py  logging.py
backend/src/evaluation/: __init__.py  comparator.py
backend/src/evaluation/strategies/: __init__.py  embedding_similarity.py  ensemble.py  heuristic.py  llm_judge.py
backend/src/rag/: __init__.py  chunker.py  embeddings.py  engine.py  vector_store.py
backend/src/schemas/: __init__.py  evaluation.py  model.py  prompt.py  rag.py
backend/tests/: conftest.py
backend/tests/api/: test_health.py  test_prompt.py
backend/tests/evaluation/: __init__.py  test_heuristic.py
backend/tests/rag/: __init__.py  test_engine.py
common/: package-lock.json  package.json  tsconfig.json
common/src/: index.ts
common/src/types/: index.ts
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.dev.yml  docker-compose.yml
frontend/: .env.example  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/arena/: page.tsx
frontend/src/app/classic/: page.tsx
frontend/src/app/config/: page.tsx
frontend/src/components/: index.ts
frontend/src/components/arena/: model-selector.tsx  (+2 more)
frontend/src/hooks/: index.ts  use-models.ts  use-prompt.ts  use-selected-models-with-characters.ts  use-toast.ts
frontend/src/services/: evaluation-service.ts  index.ts  models-service.ts  prompt-service.ts  rag-service.ts
frontend/src/stores/: character-assignment-store.ts  index.ts  models-store.ts  prompt-store.ts  rag-store.ts  ui-store.ts
frontend/src/types/: index.ts
frontend/tests/: setup.ts
frontend/tests/components/: button.test.tsx
scripts/: dev.sh  setup.sh  test.sh
(+18 files in other folders)
